Komponententest mit Binding

--- a/Stones/src/app/product/item/item.component.html
+++ b/Stones/src/app/product/item/item.component.html
@@ -1,4 +1,4 @@
-<div>id: {{product.id}} </div>
+<div class="id">id: {{product.id}} </div>
 <div>name: {{product.name}}</div>
 <div>price: {{product.price}}</div>
 <button (click)="raisePrice()">Preiserhöhung</button>
