--- a/Stones/src/app/product/product-form/product-form.component.html
+++ b/Stones/src/app/product/product-form/product-form.component.html
@@ -1,5 +1,14 @@
 <form class="example-form" [formGroup]="productForm">
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Id" formControlName="id" >
-    </mat-form-field>
-</form> 
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="Name" formControlName="name">
+  </mat-form-field>
+  <mat-form-field class="example-full-width">
+    <input type="number" matInput placeholder="Preis" formControlName="price">
+  </mat-form-field>
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="Gewicht" formControlName="weight">
+  </mat-form-field>
+  <button mat-raised-button color="primary" (click)="save()">Primary</button>
+</form>
+
+{{data | json}}
