--- a/Stones/src/app/product/product-form/product-form.component.html
+++ b/Stones/src/app/product/product-form/product-form.component.html
@@ -8,7 +8,7 @@
   <mat-form-field class="example-full-width">
     <input matInput placeholder="Gewicht" formControlName="weight">
   </mat-form-field>
-  <button mat-raised-button color="primary" (click)="save()">Primary</button>
+  <button mat-raised-button color="primary" [disabled]="!productForm.valid"  (click)="save()">Speichern</button>
 </form>
 
 {{data | json}}
