--- a/Stones/src/app/app.component.html
+++ b/Stones/src/app/app.component.html
@@ -3,7 +3,5 @@
   <h1>Willkommen in der {{ title }} App!</h1> - &nbsp;
   <small>{{now | date}}</small>
 </mat-toolbar>
-<stn-product-form></stn-product-form>
-<stn-item *ngFor="let prod of productList" [product]="prod">
-  <h3>Produkt</h3>
-</stn-item>
+
+<router-outlet></router-outlet>
