--- a/Stones/src/app/app.component.html
+++ b/Stones/src/app/app.component.html
@@ -1,7 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <mat-toolbar color="primary">
-  <h1>Willkommen in der {{ title }} App!</h1> - &nbsp;
-  <small>{{now | date}}</small>
+  <h1>{{ title }}</h1> - &nbsp;
+  <a mat-button [routerLink]="['products']">Produktliste</a>
+  <a mat-button [routerLink]="['products/new']">Neues Produkt</a>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
