--- a/Stones/src/app/product/product-list/product-list.component.html
+++ b/Stones/src/app/product/product-list/product-list.component.html
@@ -1,3 +1,4 @@
-<stn-item *ngFor="let prod of productList | async" [product]="prod">
+<stn-item *ngFor="let prod of productList | async" [product]="prod"
+  (productDeleted)="deleteProduct($event)">
   <h3>Produkt</h3>
 </stn-item> 
