--- a/Stones/src/app/app.component.html
+++ b/Stones/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <mat-toolbar color="primary">
   <h1>{{ title }}</h1> - &nbsp;
-  <a mat-button [routerLink]="['products']">Produktliste</a>
-  <a mat-button [routerLink]="['products/new']">Neues Produkt</a>
+  <a mat-button [routerLink]="['products']" i18n="Produktliste|Navigationselement Produktliste@@navpList">Produktliste</a>
+  <a mat-button [routerLink]="['products/new']" i18n>Neues Produkt</a>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
